# xts-api-client

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: class-reference.md  getting-started.md  helper-function.md  helper-functions.md  how-to-guides.md  index.md  package-structure.md  reference.md
example/helper_function_examples/: 01_cm_master_df.py  01_cm_master_to_csv.py  02_cm_master_df_async.py  02_cm_master_df_async_mutliple_logins.py  04_fo_master_df_async.py  04_fut_master_to_df_list.py  06_cm_master_to_df_list_async.py  08_dostime_to_unixtime.py  08_fut_master_to_df_list_async.py  09_async_squareoff.py  10_opt_master_to_df_list_async.py  12_ohlc_to_df_async.py  13_cm_ticker_to_exchangeInstrumentId.py  example01.py  example02.py  example07.py  example08.py
example/socketio_example/: example01.py
master_data_csv/: bse_cm_master.csv  bse_cm_master.xlsx  bse_fut_spread_master.csv  bse_fut_spread_master.xlsx  bse_future_master.csv  bse_future_master.xlsx  bse_options_master.csv  bse_options_master.xlsx  nse_cm_master.csv  nse_cm_master.xlsx  nse_fut_spread_master.csv  nse_fut_spread_master.xlsx  nse_future_master.csv  nse_future_master.xlsx  response_jsons.json
site/: 404.html  index.html
site/class-reference/: index.html
site/getting-started/: index.html
site/helper-function/: index.html
site/helper-functions/: index.html
site/how-to-guides/: index.html
site/package-structure/: index.html
site/reference/: index.html
tests/: test_helper.py  test_socket_io.py  test_xts_connect_async.py
xts_api_client/: .gitignore  README.md  mkdocs.yml  pyproject.toml
xts_api_client/docs/: explanation.md  getting-started.md  helper-function.md  how-to-guides.md  index.md  reference.md  tutorials.md
xts_api_client/example/helper_function_examples/: example01.py  example02.py  example05.py  example06.py  example09.py
xts_api_client/example/socketio_example/: example01.py
xts_api_client/site/: 404.html  index.html  objects.inv
xts_api_client/site/class-reference/: index.html
xts_api_client/site/explanation/: index.html
xts_api_client/site/getting-started/: index.html
xts_api_client/site/helper-function/: index.html
xts_api_client/site/how-to-guides/: index.html
xts_api_client/site/reference/: index.html
xts_api_client/site/search/: search_index.json
xts_api_client/site/tutorials/: index.html
xts_api_client/src/xts_api_client/: __init__.py  interactive_socket.py  interactive_socket_client.py  market_data_socket.py  market_data_socket_client.py  xts_connect.py
xts_api_client/src/xts_api_client/helper/: helper.py  xts_cm_instrument.py  xts_future_instrument.py  xts_options_instrument.py
xts_api_client/tests/: test_helper.py  test_xts_connect.py
xts_api_client/tests/example/: example03.py
(+13 files in other folders)
