[project]
name = "xts-api-client"
version = "1.0.2"
description = "A Package designed for connecting to a Stock Broker that uses Symphony Fintech Solutions Pvt. Ltd for there API."
readme = "README.md"
authors = [
    { name = "Chetan Sharan", email = "chetan.sharan@rmoneyindia.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bidict==0.21.2",
    "certifi==2020.12.5",
    "chardet==4.0.0",
    "charset-normalizer>=3.4.0",
    "idna==2.10",
    "python-engineio==3.13.0",
    "pandas>=2.2.3",
    "python-socketio==4.6.0",
    "requests==2.25.1",
    "six==1.15.0",
    "urllib3==1.26.4",
    "websocket-client==0.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material==9.5.49",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.3",
    "pypiserver>=2.3.2",
    "python-dotenv>=1.0.1",
]
